# library-agent

./: .gitignore  README.md  pyproject.toml
src/: logger.py
src/data/: lib_books.xlsx
src/library_agent/: main.py
src/library_agent/data/: lib_books.xlsx
src/rag/: ingestion.py  main.py  prompts.py  tools.py
